--- a/main.tex
+++ b/main.tex
@@ -18,7 +18,7 @@
 \begin{document}
 \title{Formelsammlung}
 \subtitle{Schriftliche Reifeprüfung Physik 2023/2024}
-\author{Simon Wögerbauer}
+\author{}
 \date{\today}
 \maketitle
 \smalltableofcontents
@@ -40,11 +40,13 @@ Leistung & $P \: [\unit{\watt},\unit{\joule\per\second}]$
 
 \section{Mechanik}
 \mathleft
+
 \begin{tabularx}{\textwidth}{X|X}
+	Ableitungen & $s'(t) = v(t) \;\;\&\;\; v'(t) = a(t)$\\
 	Newton II: & $F=m*a$\\
 	Newton III: & ${F}_{\vv{\!AB}}=-{F}_{\vv{\!BA}}$,$\quad F_{AB} = F_{BA}$, actio = reactio \\
 	Beschleunigung & $a=\frac{\Delta v}{\Delta t}$\\
-	Zentripedalkraft & $F_{ZP}=\frac{mv^2}{2}$\\
+	Zentripedalkraft & $F_{ZP}=\frac{mv^2}{r}$\\
 	Potentielle Energie & $W_{pot} = F_G * h$\\
 	Kinetische Energie & $W_{kin} = \frac{1}{2}*m*v^2$ \\
 	Gravitationskraft & $F_G = \frac{m_1 * m_2 }{r^2}$\\
@@ -52,11 +54,14 @@ Leistung & $P \: [\unit{\watt},\unit{\joule\per\second}]$
 	Dichte & $\delta = \frac{m}{V}$\\
 	Geschwindigkeit & $v = \frac{\Delta s}{\Delta t}$\\
 	Unbeschleunigte Bewegung & $ v = \frac{s}{t}$\\
-	gleichmäßig beschleunigte Bewegung & $s = \frac{a}{2}*t^2$ \hspace{.5cm} $v = a * t $\\
+	Gleichmäßig beschleunigte Bewegung & $s = \frac{a}{2}*t^2$ \hspace{.5cm} $v = a * t $\\
 	Hydrostatischer Druck & $p = \rho * g * h$ \\
 	Bernoulli-Gleichung & $\frac{1}{2}*\rho*v^2 + \rho * g * h + p = const.$\\
 	3. Kepler-Gesetz (Planetenbahnen) & $ (\frac{T_1}{T_2})^2 = (\frac{r_1}{r_2})^3$\\
 	Impuls & $\vec{p} = m * \vec{v}$\\
+	Lotrechter Wurf Höhe & $x$\\
+	Lotrechter Wurf Geschwindigkeit & $x$\\
+	Schiefer Wurf Gleichung & $y(t) = -\frac{1}{2}*g*t^2 + v_0*sin(\alpha)*t + h_0$\\
 \end{tabularx}
 \section{Elektronik}
 \begin{tabularx}{\textwidth}{X|X}
