--- a/main.tex
+++ b/main.tex
@@ -35,7 +35,11 @@ Beschleunigung & $a\:[\unit{\meter\per\second\squared}]$\\
 Frequenz & $f\: [\unit{\hertz}]$\\
 Kraft & $F\: [\unit{\newton}]$\\
 Arbeit & $W \: [\unit{\newton\meter}]$\\
-Leistung & $P \: [\unit{\watt},\unit{\joule\per\second}]$
+Leistung & $P \: [\unit{\watt},\unit{\joule\per\second}]$\\
+Elektrischer Widerstand & $R\:[\unit{\ohm}]$\\
+Elektrische Spannung & $U\:[\unit{\volt}]$\\
+Elektrische Stromspannung & $I\:[\unit{\ampere}]$\\
+Ladung & $C\:[\unit{\coulomb}]$
 \end{tabularx}
 
 \section{Mechanik}
@@ -92,7 +96,6 @@ Harmonische Schwingung / Geschwindigkeit & $y = r * \omega * \cos{\omega t}$\\
 Harmonische Schwingung / Beschleunigung & $y = -r * \omega^2 * \sin{\omega t}$\\
 Federpendel & $T = 2\pi * \sqrt{\frac{m}{k}}$\\
 Fadenpendel & $T= 2\pi * \sqrt{\frac{l}{g}}$\\
-
 \end{tabularx}
 \end{document}
 
