--- a/formelsammlung.tex
+++ b/formelsammlung.tex
@@ -7,7 +7,6 @@
 \usepackage{tabularx}
 \usepackage[margin=3cm]{geometry}
 \usepackage[per-mode=fraction]{siunitx}
-
 \usepackage{amsfonts,amssymb,amsthm,bm,amsmath}
 \usepackage{esvect}
 \makeatletter
@@ -17,10 +16,9 @@
 {\renewcommand{\arraystretch}{1.4} %<- modify value to suit your needs
 \title{Formelsammlung}
 \subtitle{Schriftliche Reifeprüfung Physik 2023/2024}
-\author{Wögerbauer, S.}
+\author{}
 \date{\today}
 \begin{document}
-
 \maketitle
 \smalltableofcontents
 \mathleft
@@ -85,8 +83,13 @@ Heisenberg'sche Unschärferealation & $\Delta x \cdot \Delta p \gtrapprox h $
 	Elektrische Stromleistung & $P_{el} = U * I$\\
 	Elektrischer Strom & $I = \frac{\Delta Q}{\Delta t}$\\
 	Ohm'sches Gesetz & $I=\frac{U}{R}$\\
-	Widerstand Serie & $R_{ges} = R_1 + R_2 + R_n$\\
-	Widerstand Parallel & $\frac{1}{R_{ges}} = \frac{1}{R_1} + \frac{1}{R_2} + \frac{1}{R_n}$\\
+	\textbf{Serienschaltung} Widerstand & $R_{ges} = R_1 + R_2 + \dots + R_n$\\
+	\textbf{Serienschaltung} Spannung & $U_{ges} = U_1 + U_2 + \dots + U_n$\\
+	\textbf{Serienschaltung} Stromstärke & $ I_{ges} = I_1 = I_2 = \dots  = I_n$\\
+
+	\textbf{Parallelschaltung} Widerstand & $\frac{1}{R_{ges}} = \frac{1}{R_{1}} + \frac{1}{R_{2}} + \dots + \frac{1}{R_{n}}$\\
+	\textbf{Parallelschaltung} Spannung & $U_{ges} = U_{1} = U_{2} = U_{n}$\\
+	\textbf{Parallelschaltung} Stromstärke  & $I_{ges}=I_{1}+I_{2}+\dots+I_{n}$\\
 	Coulomb-Kraft & $F = \frac{1}{4*\pi * \epsilon_{0}} * \frac{Q_1 * Q_2}{r^2}$\\
 	Ladung eines Kondensators & $Q = U * C$\\
 	Wechselspannung & $U = U_0 * \sin{\omega t}$\\
