--- a/formelsammlung.tex
+++ b/formelsammlung.tex
@@ -53,7 +53,7 @@ Ladung & $C\:[\unit{\coulomb}]$
 	Zentripedalkraft & $F_{ZP}=\frac{mv^2}{r}$\\
 	Potentielle Energie & $W_{pot} = F_G * h$\\
 	Kinetische Energie & $W_{kin} = \frac{1}{2}*m*v^2$ \\
-	Gravitationskraft & $F_G = \frac{m_1 * m_2 }{r^2}$\\
+	Gravitationskraft & $F_G =G* \frac{m_1 * m_2 }{r^2}$\\
 	Gewichtskraft & $F_g = m * g$\\
 	Dichte & $\rho = \frac{m}{V}$\\
 	Geschwindigkeit & $v = \frac{\Delta s}{\Delta t}$\\
@@ -70,9 +70,13 @@ Ladung & $C\:[\unit{\coulomb}]$
 \end{tabularx}
 \section{Relativität \& Quantenphysik}
 \begin{tabularx}{\textwidth}{X|X}
+	Elektronenvolt Formel & $E=q*U$\\
+Zusammenhang Frequenz/Wellenlänge & $c = \lambda * f$\\
+Energie des Photons &  $E = h *f$\\
 Zeitdilatation & $t' = t * \sqrt{1- (\frac{v}{c})^2}$\\
 Längenkontraktion & $s' = s * \sqrt{1- (\frac{v}{c})^2}$\\
 Dynamische Masse & $m_{d} = \frac{m_0}{\sqrt{1- (\frac{v}{c})^2}}$\\
+Photoelektrischer Effekt & $E_{kin} + W_A=h*f$\\
 Geschwindigkeitsaddition & u = $\frac{{u' + v}}{{1 + \frac{{u'  * v}}{{{c^2}}}}} $, wobei $u$\dots Geschw. im System $S$, $u'$\dots Geschw. im System $S'$, $v'$\dots Geschw. von $S'$ im Bezug zu $S$\\
 Heisenberg'sche Unschärferealation & $\Delta x \cdot \Delta p \gtrapprox h $
 
@@ -97,8 +101,9 @@ Heisenberg'sche Unschärferealation & $\Delta x \cdot \Delta p \gtrapprox h $
 \section{Thermodynamik}
 \begin{tabularx}{\textwidth}{X|X}
 	Wärmeenergie & $Q=c*m*\Delta T$\\
+	Schmelzenergie & $Q = c*m*\Delta T + c_{Schmelz} * m$\\
 	Längenänderung & $l = l_0 * (1 + \alpha * \Delta T)$\\
-	Allgemeine Gasgleichung & $pV = n*R*T = n *K_b * T$\\
+	Allgemeine Gasgleichung & $p*V = n *K_b * T$\\
 	Isobare Zustandsänderung & $\frac{V}{T} = const.$\\
 	Isotherme Zustandsänderung & $p*V = const.$\\
 	Isochore Zustandsänderung & $\frac{p}{T} = const.$\\
